--- a/Workstack/docker-compose.yml
+++ b/Workstack/docker-compose.yml
@@ -55,6 +55,9 @@ services:
       - '53:53/udp'
       - "67:67/udp"
       - '8053:80/tcp'
+    dns:
+      - 127.0.0.1
+      - 1.1.1.1
     volumes:
       - './etc-pihole:/etc/pihole'
       - './etc-dnsmasq.d:/etc/dnsmasq.d'
