Add env support for specifying domain names

--- a/Homestack/.env
+++ b/Homestack/.env
@@ -24,3 +24,7 @@ RFC2136_NAMESERVER=...
 RFC2136_TSIG_ALGORITHM=hmac-sha512.
 RFC2136_TSIG_KEY=...
 RFC2136_TSIG_SECRET=...
+
+##
+# Top level configs
+HOME_SERVER_DOMAIN=bunbun.home
