refactored traefik and homestack

--- a/Traefik/docker-compose.yml
+++ b/Traefik/docker-compose.yml
@@ -1,145 +1,28 @@
 version: '3'
 
 networks:
-  frontend:
-  backend:
-
-volumes:
-  pgdata:
-  opdata:
-
-x-op-restart-policy: &restart_policy
-  restart: unless-stopped
-x-op-image: &image
-  image: openproject/community:${TAG:-13}
-x-op-app: &app
-  <<: [*image, *restart_policy]
-  environment:
-    OPENPROJECT_HTTPS: "${OPENPROJECT_HTTPS:-true}"
-    OPENPROJECT_HOST__NAME: "${OPENPROJECT_HOST__NAME:-localhost:8080}"
-    OPENPROJECT_HSTS: "${OPENPROJECT_HSTS:-true}"
-    RAILS_CACHE_STORE: "memcache"
-    OPENPROJECT_CACHE__MEMCACHE__SERVER: "cache:11211"
-    OPENPROJECT_RAILS__RELATIVE__URL__ROOT: "${OPENPROJECT_RAILS__RELATIVE__URL__ROOT:-}"
-    DATABASE_URL: "${DATABASE_URL:-postgres://postgres:p4ssw0rd@db/openproject?pool=20&encoding=unicode&reconnect=true}"
-    RAILS_MIN_THREADS: ${RAILS_MIN_THREADS:-4}
-    RAILS_MAX_THREADS: ${RAILS_MAX_THREADS:-16}
-    # set to true to enable the email receiving feature. See ./docker/cron for more options
-    IMAP_ENABLED: "${IMAP_ENABLED:-false}"
-  volumes:
-    - "${OPDATA:-opdata}:/var/openproject/assets"
+  traefik-net:
 
 services:
-  reverse-proxy:
+  traefik:
     # The official v2 Traefik docker image
     image: traefik:v2.11
     # Enables the web UI and tells Traefik to listen to docker
-    command: --api.insecure=true --providers.docker
+    command: 
+      --api.insecure=true 
+      --providers.docker
+      --providers.docker.exposedbydefault=false
+      --entryPoints.web.address=:80
+      --entryPoints.websecure.address=:443
     ports:
       # The HTTP port
       - "80:80"
+      # The HTTPS port
+      - "443:443"
       # The Web UI (enabled by --api.insecure=true)
       - "8080:8080"
     volumes:
       # So that Traefik can listen to the Docker events
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
-      - frontend
-      
-  whoami:
-    # A container that exposes an API to show its IP address
-    image: traefik/whoami
-    labels:
-      - "traefik.http.routers.whoami.rule=Host(`whoami.docker.localhost`)"
-
-  db:
-    image: postgres:13
-    <<: *restart_policy
-    stop_grace_period: "3s"
-    volumes:
-      - "${PGDATA:-pgdata}:/var/lib/postgresql/data"
-    environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-p4ssw0rd}
-      POSTGRES_DB: openproject
-    networks:
-      - backend
-
-  cache:
-    image: memcached
-    <<: *restart_policy
-    networks:
-      - backend
-
-  proxy:
-    <<: [*image, *restart_policy]
-    command: "./docker/prod/proxy"
-    # ports:
-    #   - "${PORT:-8080}:80"
-    environment:
-      APP_HOST: web
-      OPENPROJECT_RAILS__RELATIVE__URL__ROOT: "${OPENPROJECT_RAILS__RELATIVE__URL__ROOT:-}"
-    depends_on:
-      - web
-    networks:
-      - frontend
-    labels:
-      - "traefik.http.routers.open_project.rule=Host(`project.docker.localhost`)"
-      - "traefik.http.routers.open_project_LAN.rule=Host(`gentran-aspire-s5-371t.local`)"
-      - "traefik.http.routers.open_project_LAN.rule=PathPrefix(`/project`)"
-      
-
-  web:
-    <<: *app
-    command: "./docker/prod/web"
-    networks:
-      - frontend
-      - backend
-    depends_on:
-      - db
-      - cache
-      - seeder
-    labels:
-      - autoheal=true
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080${OPENPROJECT_RAILS__RELATIVE__URL__ROOT:-}/health_checks/default"]
-      interval: 10s
-      timeout: 3s
-      retries: 3
-      start_period: 30s
-
-  autoheal:
-    image: willfarrell/autoheal:1.2.0
-    volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock"
-    environment:
-      AUTOHEAL_CONTAINER_LABEL: autoheal
-      AUTOHEAL_START_PERIOD: 600
-      AUTOHEAL_INTERVAL: 30
-
-  worker:
-    <<: *app
-    command: "./docker/prod/worker"
-    networks:
-      - backend
-    depends_on:
-      - db
-      - cache
-      - seeder
-
-  cron:
-    <<: *app
-    command: "./docker/prod/cron"
-    networks:
-      - backend
-    depends_on:
-      - db
-      - cache
-      - seeder
-
-  seeder:
-    <<: *app
-    command: "./docker/prod/seeder"
-    restart: on-failure
-    networks:
-      - backend
-
+      - traefik-net
