--- a/Homestack/compose.yml
+++ b/Homestack/compose.yml
@@ -4,3 +4,4 @@ include:
   - ../Traefik/docker-compose.yml ## Traefik: reverse proxy
   - ../PiHole/docker-compose.yml ## Pihole: DNS server and ad blocker
   - ../Metube/docker-compose.yml ## Metube: YouTube downloader
+  - ../Jellyfin/docker-compose.yml ## Jellyfin: Media server
