--- a/Workstack/.env
+++ b/Workstack/.env
@@ -7,8 +7,8 @@
 #   https://www.openproject.org/docs/installation-and-operations/configuration/environment/
 #
 TAG=13
-OPENPROJECT_HTTPS=false
-OPENPROJECT_HOST__NAME=project.bunbun.home
+OPENPROJECT_HTTPS=true
+OPENPROJECT_HOST__NAME=needlessly-optimal-labrador.ngrok-free.app
 PORT=8080
 OPENPROJECT_RAILS__RELATIVE__URL__ROOT=
 IMAP_ENABLED=false
