--- a/Homestack/compose.yml
+++ b/Homestack/compose.yml
@@ -1,9 +1,10 @@
 version: '3'
 
 include:
-  - ../Traefik/docker-compose.yml ## Traefik: reverse proxy
-  - ../PiHole/docker-compose.yml ## Pihole: DNS server and ad blocker
-  - ../Metube/docker-compose.yml ## Metube: YouTube downloader
-  - ../Jellyfin/docker-compose.yml ## Jellyfin: Media server
-  - ../Mealie/compose.yaml ## Mealie: Menu planner server
-  - ../CodeServer/compose.yaml ## Codeserver
+  - path: ../Traefik/docker-compose.yml ## Traefik: reverse proxy
+  - path: ../Traefik/docker-compose.yml ## Traefik: reverse proxy
+  - path: ../PiHole/docker-compose.yml ## Pihole: DNS server and ad blocker
+  - path: ../Metube/docker-compose.yml ## Metube: YouTube downloader
+  - path: ../Jellyfin/docker-compose.yml ## Jellyfin: Media server
+  - path: ../Mealie/compose.yaml ## Mealie: Menu planner server
+  - path: ../CodeServer/compose.yaml ## Codeserver
