AI-Stack first draft

--- a/AI-Stack/.env
+++ b/AI-Stack/.env
@@ -2,7 +2,8 @@
 OLLAMA_VOLUME=/Users/a1677932/.ollama # Local directory for storing models and configurations of OLLAMA
 
 # Open WebUI configurations
-OLLAMA_BASE_URL=http://host.docker.internal:11434 # URL for accessing OLLAMA server
+OLLAMA_BASE_URL="http://10.42.0.120:11434" # URL for accessing OLLAMA server
+OLLAMA_BASE_IP=10.42.0.120 # IP of the host that runs OLLAMA server
 
 # Silly Tavern configurations
 ST_TZ="ACDT" # Time zone
