--- a/AI-Stack/example.env
+++ b/AI-Stack/example.env
@@ -2,4 +2,11 @@
 OLLAMA_VOLUME=/Users/a1677932/.ollama # Local directory for storing models and configurations of OLLAMA
 
 # Open WebUI configurations
-OLLAMA_BASE_URL=http://host.docker.internal:11434 # URL for accessing OLLAMA server
+OLLAMA_BASE_URL="http://xx.xx.xx.xx:11434" # URL for accessing OLLAMA server
+OLLAMA_BASE_IP=xx.xx.xx.xx # IP of the host that runs OLLAMA server
+
+# Silly Tavern configurations
+ST_TZ="ACDT" # Time zone
+ST_PLUGINS="./silly-tavern/plugins" # Local directory for plugins
+ST_CONFIG="./silly-tavern/config" # Local directory for config
+ST_DATA="./silly-tavern/data" # Local directory for data
