--- a/Apps/OpenWebUI/compose.no.traefik.yml
+++ b/Apps/OpenWebUI/compose.no.traefik.yml
@@ -7,14 +7,13 @@ services:
       - open-webui:/app/backend/data
     restart: unless-stopped
     # network_mode: host
+    ports:
+      - 3000:8080
     networks:
       - traefik-net
+      - macvlan-net
     extra_hosts:
       - "host.docker.internal:host-gateway"
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)"
-      - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}"
 
 volumes:
   open-webui:
