--- a/Apps/SillyTavern/compose.lan.yml
+++ b/Apps/SillyTavern/compose.lan.yml
@@ -9,15 +9,15 @@ services:
       - silly-tavern-data:/home/node/app/data
     restart: unless-stopped
     networks:
-      - macvlan
       - traefik-net
+      - macvlan-net
     extra_hosts:
       - "host.docker.internal:host-gateway"
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`)"
-      - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.localhost`)"
-      # - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=PORT"
+      - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)"
+      - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}"
+      - "traefik.docker.network=${STACK_NAME}_${TRAEFIK_NETWORK}"
 
 volumes:
   silly-tavern-data:
