--- a/Apps/SillyTavern/compose.no.traefik.yml
+++ b/Apps/SillyTavern/compose.no.traefik.yml
@@ -8,14 +8,13 @@ services:
       - ./config:/home/node/app/config
       - silly-tavern-data:/home/node/app/data
     restart: unless-stopped
+    ports:
+      - 9999:8000/tcp
     networks:
       - traefik-net
+      - macvlan-net
     extra_hosts:
       - "host.docker.internal:host-gateway"
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)"
-      # - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=PORT"
 
 volumes:
   silly-tavern-data:
