--- a/Stack-Template/.env.default
+++ b/Stack-Template/.env.default
@@ -1,3 +1,5 @@
 # Top level configs
 HOME_SERVER_DOMAIN=home.domain.name
 HOME_SERVER_TZ="Australia/Adelaide"
+STACK_NAME="my_stack"
+TRAEFIK_NETWORK="traefik-net"
