Add AnythingLLM to local stack

--- a/Stack-AI-Local/compose.yml
+++ b/Stack-AI-Local/compose.yml
@@ -7,6 +7,7 @@ include:
   - path: ../Apps/Searxng/compose.yml
   # - path: ../Apps/Langflow/compose.yml
   # - path: ../Apps/GPT-Researcher/compose.yml
+  - path: ../Apps/AnythingLLM/compose.yml
 
 networks:
   traefik-net: # Traefik network connecting internal apps to the reverse proxy
