--- a/Apps/GPT-Researcher/compose.yml
+++ b/Apps/GPT-Researcher/compose.yml
@@ -3,7 +3,7 @@ services:
     image: gentran1991/gpt-researcher:0.3.1
     environment: 
       # Use ollama for both, LLM and EMBEDDING provider
-      LLM_PROVIDER=: ollama
+      LLM_PROVIDER: ollama
       # Ollama endpoint to use
       OLLAMA_BASE_URL: ${GPT_RESEARCHER_OLLAMA_URL}
       # Specify one of the LLM models supported by Ollama
@@ -25,6 +25,6 @@ services:
       - "host.docker.internal:host-gateway"
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`)"
-      - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.localhost`)"
+      - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)"
+      - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}"
       # - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=PORT" # Add this line if traefik cannot detect the port of this container
