Created foundation compose stack and WIP home stack

--- a/Apps/Traefik/docker-compose.yml
+++ b/Apps/Traefik/docker-compose.yml
@@ -3,7 +3,8 @@ version: '3'
 services:
   traefik:
     # The official v2 Traefik docker image
-    image: traefik:v2.11
+    # image: traefik:v2.11
+    image: traefik:3
     # Enables the web UI and tells Traefik to listen to docker
     command: 
       --api.insecure=true 
