Refactor stacks, create stack template, and refactor apps to work with new stack

--- a/Apps/Jellyfin/default.env
+++ b/Apps/Jellyfin/default.env
@@ -1,2 +1,4 @@
-JELLYFIN_DOMAIN="JELLYFIN SUBDOMAIN"
+APP_NAME=jellyfin
+APP_DOMAIN=jellyfin
+APP_PORT=8096
 JELLYFIN_LOCAL_MEDIA_DIR="/path/to/local/folder/with/media"
