--- a/Apps/PiHole/default.env
+++ b/Apps/PiHole/default.env
@@ -1,3 +1,3 @@
-# Subdomain for reaching pihole instance
-PIHOLE_DOMAIN="ADD YOUR PIHOLE SUBDOMAIN"
-PIHOLE_WEB_PASSWORD="CHANGE YOUR PIHOLE ADMIN PAGE PASSWORD"
+APP_NAME=pihole
+APP_DOMAIN=pihole
+APP_PORT=80
