--- a/Apps/Metabase/compose.yml
+++ b/Apps/Metabase/compose.yml
@@ -1,7 +1,6 @@
 services:
   metabase:
     image: metabase/metabase:latest
-    container_name: metabase
     hostname: metabase
     volumes:
       - /dev/urandom:/dev/random:ro
@@ -34,8 +33,9 @@ services:
 
   postgres:
     image: postgres:latest
-    container_name: postgres
     hostname: postgres
+    ports:
+      - 5432:5432
     environment:
       POSTGRES_USER: metabase
       POSTGRES_DB: metabaseappdb
