Added persistence layer to the stack

--- a/Stacks/Data-Analysis/compose.yml
+++ b/Stacks/Data-Analysis/compose.yml
@@ -3,6 +3,7 @@
 #
 include:
   - path: "../Foundation/compose.yml" ## Foundation stack 
+  - path: "../Persistence/compose.yml" ## Data storage layer
   - path: "../../Apps/Metabase/compose.yml" ## App with custom envs
     env_file:
        - ../../Apps/Metabase/default.env
