--- a/Apps/Portainer/compose.yml
+++ b/Apps/Portainer/compose.yml
@@ -1,9 +1,10 @@
+# Known error: cannot access via portainer.localhost. Must juse https://localhost:9443
+
 services:
   portainer:
     image: portainer/portainer-ce:lts  # Specify the image
-    container_name: portainer  # Set the container name
     ports:
-      - "8000:8000"  # Map port 8000
+    #   - "8000:8000"  # Map port 8000
       - "9443:9443"  # Map port 9443
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock  # Share the Docker socket
@@ -18,6 +19,8 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)"
+      - "traefik.http.routers.${APP_NAME}.tls=true"
+      - "traefik.http.routers.${APP_NAME}.tls.options=default"
       - "traefik.http.routers.${APP_NAME}.entrypoints=websecure"
       - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}"
 
