--- a/Apps/Searxng/compose.yml
+++ b/Apps/Searxng/compose.yml
@@ -1,6 +1,7 @@
 services:
   searxng:
     image: searxng/searxng:latest
+    hostname: searxng
     volumes:
       - ./searxng:/etc/searxng
     restart: unless-stopped
