--- a/Stacks/Home-Server/default.env
+++ b/Stacks/Home-Server/default.env
@@ -1,8 +1,13 @@
 # Top level configs
 HOME_SERVER_DOMAIN="localhost" # Domain name to access the stack. App would be available as subdomain (e.g., app.localhost)
 HOME_SERVER_TZ="Australia/Adelaide"
-STACK_NAME="my_stack"
+STACK_NAME="home-server"
 TRAEFIK_NETWORK="traefik-net" 
+
+# Jupyter Notebook
+JUPYTER_WORKDIR="/var/home/nguyentran/Documents"
+
+# Media stack
 JELLYFIN_LOCAL_MEDIA_DIR="/home/nguyentran/Videos"
 METUBE_LOCAL_DOWNLOAD_DIR="/home/nguyentran/Videos" # Path on local machine where the media file would be stored
 METUBE_COOKIE_TXT_PATH="./cookies-youtube-com.txt" # Cookie file from YouTube
