--- a/Apps/Jupyter/compose.lan.yml
+++ b/Apps/Jupyter/compose.lan.yml
@@ -1,25 +1,21 @@
 services:
   open-webui:
-    image: ghcr.io/open-webui/open-webui:main
-    environment:
-      OLLAMA_BASE_URL: ${OLLAMA_BASE_URL}
-      OPENAI_API_KEY: ${OPENAI_API_KEY}
-      ENABLE_WEB_SEARCH: True
-      WEB_SEARCH_RESULT_COUNT: 10
-      WEB_SEARCH_ENGINE: ${OLLAMA_WEB_SEARCH_ENGINE}
-      SEARXNG_QUERY_URL: ${OLLAMA_SEARXNG_QUERY_URL}
-    volumes:
-      - open-webui:/app/backend/data
+    # image: ghcr.io/open-webui/open-webui:main
+    # environment:
+    #   OLLAMA_BASE_URL: ${OLLAMA_BASE_URL}
+    # volumes:
+    #   - open-webui:/app/backend/data
     restart: unless-stopped
-    # network_mode: host
     networks:
       - traefik-net
+      - macvlan-net
     extra_hosts:
       - "host.docker.internal:host-gateway"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)"
       - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}"
+      - "traefik.docker.network=${STACK_NAME}_${TRAEFIK_NETWORK}"
 
 volumes:
   open-webui:
