--- a/Apps/OpenWebUI/default.env
+++ b/Apps/OpenWebUI/default.env
@@ -3,3 +3,6 @@ APP_DOMAIN=openwebui
 APP_PORT=8080
 
 OLLAMA_BASE_URL=http://host.docker.internal:11434
+OLLAMA_WEB_SEARCH_ENGINE=searxng
+OLLAMA_SEARXNG_QUERY_URL="http://searxng/search?q=<query>"
+OPENAI_API_KEY=${OPENAI_API_KEY}
