--- a/Apps/SillyTavern/compose.yml
+++ b/Apps/SillyTavern/compose.yml
@@ -15,7 +15,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)"
-      # - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=PORT"
+      - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}"
 
 volumes:
   silly-tavern-data:
