--- a/Apps/SillyTavern/config/config.yaml
+++ b/Apps/SillyTavern/config/config.yaml
@@ -13,35 +13,96 @@ basicAuthUser:
 enableCorsProxy: false
 enableUserAccounts: false
 enableDiscreetLogin: false
-cookieSecret: E+JWU0q0n8DdopC8gOUFVFk31Nh85S2MSafKvwbTgY1lCjF839U8nuAV6KokQKPCju6uphaOFtAAGLnVdsFbJw==
 disableCsrfProtection: false
 securityOverride: false
 autorun: true
-disableThumbnails: false
-thumbnailsQuality: 95
-avatarThumbnailsPng: false
 allowKeysExposure: false
 skipContentCheck: false
-disableChatBackup: false
-numberOfBackups: 50
 whitelistImportDomains:
   - localhost
   - cdn.discordapp.com
   - files.catbox.moe
   - raw.githubusercontent.com
+  - char-archive.evulid.cc
 requestOverrides: []
-enableExtensions: true
 extras:
-  disableAutoDownload: false
-  classificationModel: Cohee/distilbert-base-uncased-go-emotions-onnx
-  captioningModel: Xenova/vit-gpt2-image-captioning
-  embeddingModel: Cohee/jina-embeddings-v2-base-en
   promptExpansionModel: Cohee/fooocus_expansion-onnx
-  speechToTextModel: Xenova/whisper-small
-  textToSpeechModel: Xenova/speecht5_tts
 openai:
   randomizeUserId: false
   captionSystemPrompt: ""
 deepl:
   formality: default
 enableServerPlugins: false
+thumbnails:
+  enabled: true
+  quality: 95
+  format: jpg
+  dimensions:
+    bg:
+      - 160
+      - 90
+    avatar:
+      - 96
+      - 144
+backups:
+  chat:
+    enabled: true
+    checkIntegrity: true
+    maxTotalBackups: -1
+    throttleInterval: 10000
+  common:
+    numberOfBackups: 50
+extensions:
+  enabled: true
+  models:
+    autoDownload: true
+    classification: Cohee/distilbert-base-uncased-go-emotions-onnx
+    captioning: Xenova/vit-gpt2-image-captioning
+    embedding: Cohee/jina-embeddings-v2-base-en
+    speechToText: Xenova/whisper-small
+    textToSpeech: Xenova/speecht5_tts
+  autoUpdate: true
+listenAddress:
+  ipv4: 0.0.0.0
+  ipv6: "[::]"
+protocol:
+  ipv4: true
+  ipv6: false
+dnsPreferIPv6: false
+autorunHostname: auto
+autorunPortOverride: -1
+ssl:
+  enabled: false
+  certPath: ./certs/cert.pem
+  keyPath: ./certs/privkey.pem
+whitelistDockerHosts: true
+requestProxy:
+  enabled: false
+  url: socks5://username:password@example.com:1080
+  bypass:
+    - localhost
+    - 127.0.0.1
+autheliaAuth: false
+perUserBasicAuth: false
+sessionTimeout: -1
+logging:
+  enableAccessLog: true
+  minLogLevel: 0
+rateLimiting:
+  preferRealIpHeader: false
+avoidLocalhost: false
+performance:
+  lazyLoadCharacters: false
+  memoryCacheCapacity: 100mb
+  useDiskCache: true
+enableDownloadableTokenizers: true
+promptPlaceholder: "[Start a new chat]"
+mistral:
+  enablePrefix: false
+ollama:
+  keepAlive: -1
+  batchSize: -1
+claude:
+  enableSystemPromptCache: false
+  cachingAtDepth: -1
+enableServerPluginsAutoUpdate: true
