--- a/Apps/Jellyfin/compose.yml
+++ b/Apps/Jellyfin/compose.yml
@@ -6,6 +6,7 @@ services:
       - jellyfin-config:/config
       - jellyfin-cache:/cache
       - ${JELLYFIN_LOCAL_MEDIA_DIR}:/media
+      - /dev/dri:/dev/dri
     restart: 'unless-stopped'
     # Optional - alternative address used for autodiscovery
     environment:
