--- a/Stacks/Office-Lab/office.env
+++ b/Stacks/Office-Lab/office.env
@@ -1,5 +1,5 @@
 # Top level configs
-HOME_SERVER_DOMAIN="localhost" # Domain name to access the stack. App would be available as subdomain (e.g., app.localhost)
+HOME_SERVER_DOMAIN="aurora.local" # Domain name to access the stack. App would be available as subdomain (e.g., app.localhost)
 HOME_SERVER_TZ="Australia/Adelaide"
 STACK_NAME="office-lab"
 TRAEFIK_NETWORK="traefik-net" 
