--- a/Apps/PiHole/default.env
+++ b/Apps/PiHole/default.env
@@ -1,4 +1,5 @@
 APP_NAME=pihole
 APP_DOMAIN=pihole
 APP_PORT=80
-PIHOLE_EXTRA_HOSTS="nw2master.bioware.com nwn2.master.gamespy.com:0.0.0.0,bunbun.home:192.168.8.2,pihole pihole.bunbun.home:192.168.8.2,media media.bunbun.home:192.168.8.2,metube metube.bunbun.home:192.168.8.2,mealie mealie.bunbun.home:192.168.8.2,codeserver codeserver.bunbun.home:192.168.8.2" # Pihole can be used as a DNS server. These options are to setup the domain resolution.
+PIHOLE_EXTRA_HOSTS="nw2master.bioware.com nwn2.master.gamespy.com:0.0.0.0,bunbun.home:192.168.8.2,pihole.bunbun.home:192.168.8.2,media.bunbun.home:192.168.8.2,metube.bunbun.home:192.168.8.2,mealie.bunbun.home:192.168.8.2,codeserver.bunbun.home:192.168.8.2" # Pihole can be used as a DNS server. These options are to setup the domain resolution.
+PIHOLE_WEB_PASSWORD=pihole
