--- a/Apps/Netshoot/compose.yml
+++ b/Apps/Netshoot/compose.yml
@@ -1,14 +1,9 @@
 services:
-  anything_llm:
-    image: mintplexlabs/anythingllm:1.8
-    volumes:
-      - anythingllm:/app/server/storage 
-      # - ./.env.anythingllm:/app/server/.env
-    # ports:
-    #   - "3001:3001"
-    cap_add:
-      - SYS_ADMIN 
+  netshoot:
+    image: nicolaka/netshoot:v0.13    
     restart: unless-stopped
+    tty: true        # Allocate a pseudo-TTY
+    stdin_open: true # Keep stdin open so you can attach a terminal
     networks:
       - traefik-net
     extra_hosts:
@@ -17,6 +12,3 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)"
       - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}"
-
-volumes:
-  anythingllm:
