--- a/Apps/Traefik/compose.yml
+++ b/Apps/Traefik/compose.yml
@@ -23,3 +23,5 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - traefik-net
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
