--- a/Stacks/Office-Lab/default.env
+++ b/Stacks/Office-Lab/default.env
@@ -3,3 +3,5 @@ HOME_SERVER_DOMAIN="localhost" # Domain name to access the stack. App would be a
 HOME_SERVER_TZ="Australia/Adelaide"
 STACK_NAME="office-lab"
 TRAEFIK_NETWORK="traefik-net" 
+USER_ID=1000
+GROUP_ID=1000
