--- a/Stacks/Office-Lab/office.env
+++ b/Stacks/Office-Lab/office.env
@@ -3,6 +3,8 @@ HOME_SERVER_DOMAIN="aurora.local" # Domain name to access the stack. App would b
 HOME_SERVER_TZ="Australia/Adelaide"
 STACK_NAME="office-lab"
 TRAEFIK_NETWORK="traefik-net" 
+USER_ID=1000
+GROUP_ID=1000
 
 # Jupyter Notebook
 JUPYTER_WORKDIR="/var/home/nguyentran/Documents"
