--- a/Stacks/Office-Lab/homepage-config/services.yaml
+++ b/Stacks/Office-Lab/homepage-config/services.yaml
@@ -6,65 +6,65 @@
     - Applications:
       - OpenWebUI:
           icon: chatgpt.svg
-          href: http://openwebui.localhost/
+          href: http://openwebui.aurora.local/
           description: Chatbot Interface with web search
       - AnythingLLM:
           icon: chatgpt.svg
-          href: http://anythingllm.localhost/
+          href: http://anythingllm.aurora.local/
           description: Integrated workspace for LLM with RAG and agent support
       - SillyTavern:
           icon: chatgpt.svg
-          href: http://sillytavern.localhost/
+          href: http://sillytavern.aurora.local/
           description: LLM inteface for powerusers
     - Tools:
       - Langflow:
           icon: chatgpt.svg
-          href: http://langflow.localhost/
+          href: http://langflow.aurora.local/
           description: No-code development of LLM agents
 - Data:
   - Analysis:
     - Metabase:
         icon: metabase.svg
-        href: http://metabase.localhost/
+        href: http://metabase.aurora.local/
         description: Low-code BI tool
     - Jupyter:
         icon: jupyter.svg
-        href: http://jupyter.localhost/
+        href: http://jupyter.aurora.local/
         description: Jupyter Lab
   - Storage:
     - Postgres:
         icon: postgres.svg
-        href: http://postgres.localhost/
+        href: http://postgres.aurora.local/
         description: Main relational database of the stack
 
 - Media:
     - Jellyfin:
         icon: jellyfin.svg
-        href: http://jellyfin.localhost/
+        href: http://jellyfin.aurora.local/
         description: Media server
     - Metube:
         icon: youtube.svg
-        href: http://metube.localhost/
+        href: http://metube.aurora.local/
         description: Youtube downloader
     - Mealie:
         icon: mealie.svg
-        href: http://mealie.localhost/
+        href: http://mealie.aurora.local/
         description: Recipe database
 
 - Monitoring Tools:
     - Portainer:
         icon: portainer.svg
-        href: http://portainer.localhost/
+        href: http://portainer.aurora.local/
         description: Container monitoring
     - Netdata:
         icon: netdata.svg
-        href: http://localhost:19999/
+        href: http://aurora.local:19999/
         description: System metrics dashboard
     - Traefik:
         icon: traefik.svg
-        href: http://localhost:8080/
+        href: http://aurora.local:8080/
         description: Network Proxy
     - Authentik:
         icon: authentik.svg
-        href: http://authentik.localhost/
+        href: http://authentik.aurora.local/
         description: Identity provider
