--- a/Apps/Homepage/compose.yml
+++ b/Apps/Homepage/compose.yml
@@ -9,8 +9,8 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock # (optional) For docker integrations
     environment:
       HOMEPAGE_ALLOWED_HOSTS: ${APP_DOMAIN}.${HOME_SERVER_DOMAIN},${APP_DOMAIN}.localhost # required, may need port. See gethomepage.dev/installation/#homepage_allowed_host
-      PUID: 1000 # optional, your user id
-      PGID: 1000 # optional, your group id
+      # PUID: 1000 # optional, your user id
+      # PGID: 1000 # optional, your group id
     restart: unless-stopped
     networks:
       - traefik-net
