--- a/Apps/Template/compose.yml
+++ b/Apps/Template/compose.yml
@@ -1,19 +1,41 @@
 services:
-  open-webui:
-    # image: ghcr.io/open-webui/open-webui:main
-    # environment:
-    #   OLLAMA_BASE_URL: ${OLLAMA_BASE_URL}
-    # volumes:
-    #   - open-webui:/app/backend/data
+  open-webui: # Main service of this app. Accessible from proxy and homepage.
+    image: ghcr.io/open-webui/open-webui:main
+    environment: 
+      OLLAMA_BASE_URL: ${OLLAMA_BASE_URL}
+      ENABLE_WEB_SEARCH: True
+      WEB_SEARCH_RESULT_COUNT: 10
+      WEB_SEARCH_ENGINE: ${OLLAMA_WEB_SEARCH_ENGINE}
+      SEARXNG_QUERY_URL: ${OLLAMA_SEARXNG_QUERY_URL}
+    depends_on: # Wait for dependent services
+      searxng:
+    volumes:
+      - open-webui:/app/backend/data
     restart: unless-stopped
     networks:
       - traefik-net
     extra_hosts:
       - "host.docker.internal:host-gateway"
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)"
-      - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}"
+      - "traefik.enable=true" # Enable reverse proxy
+      - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)" # Domain names to reach the app
+      - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}" # Tell reverse proxy which port to use
+      - "homepage.group=Homepage_Group" # Group for this service on the homepage
+      - "homepage.name=Homepage_Name" # Name of this service on the homepage
+      - "homepage.icon=jellyfin.png" # Pick from https://github.com/homarr-labs/dashboard-icons
+      - "homepage.href=http://${APP_DOMAIN}.${HOME_SERVER_DOMAIN}/" # Link to access this service on the homepage
+      - "homepage.description=Media server" # Description of this service on the homepage
+
+  searxng: # Dependent services. Hidden from proxy and homepage.
+    image: searxng/searxng:2025.5.13-1a8884f    
+    hostname: searxng
+    volumes:
+      - ./searxng:/etc/searxng
+    restart: unless-stopped
+    networks:
+      - traefik-net
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 volumes:
   open-webui:
